--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bms",
   "version": "1.0.0",
   "description": "",
-  "main": "bms_server.js",
+  "main": "main.js",
   "scripts": {
     "start": "node main"
   },
