--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "bms",
   "version": "1.0.0",
+  "engines": {
+    "node" : "8.11.3",
+    "npm" : "5.6.0",
+  },
   "description": "",
   "main": "main.js",
   "scripts": {
