--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node main"
+    "start": "node main.js"
   },
   "author": "",
   "license": "ISC",
