--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "engines": {
     "node" : "8.11.3",
-    "npm" : "5.6.0",
+    "npm" : "5.6.0"
   },
   "description": "",
   "main": "main.js",
