--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "bms",
-  "version": "1.0.0",
-  "engines": {
-    "node" : "8.11.3",
-    "npm" : "5.6.0"
-  },
-  "description": "",
-  "main": "main.js",
+  "name": "node-sample",
+  "description": "Our sample Node to Heroku app",
+  "main": "server.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "mongoose": "^5.1.7"
+    "ejs": "~1.0.0",
+    "express": "~4.9.8",
+     "mongoose": "^5.1.7"
   }
 }
